--- a/Aula4.ipynb
+++ b/Aula4.ipynb
@@ -747,7 +747,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalizando o histograma (Para deixar comparação mais fácil)"
+    "## Alterando o histograma para mostrar densidade de probabilidade\n",
+    "Para deixar comparação mais fácil"
    ]
   },
   {
